--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- header section -->
 <header>
 	<div class="container1">
-		<h1 class="main"><a href="Mainpage.html"style="color:white";>Main Page</a></h1>
+		<h1 class="main"><a href="https://hariharanandhan.github.io/DBMS_Phase1_Group_D/"style="color:white";>Main Page</a></h1>
 	</div>
 		<div class="row1">
 			<div class="col-md-12">
